--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -7,7 +7,8 @@
 #   Organization : Medialab - Sciences Po
 #   Version : 1.0
 
-host: YOUR_HOST
-user: YOUR_USER
+host: localhost
+port: 3306
+user: root
 password: YOUR_PASSWORD
-database: YOUR_DATABASE
+database: giec
